[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hanetoolpy"
version = "0.0.2"
description = "test"
authors = ["hanekit"]

[tool.poetry.scripts]
hanetoolpy = "hanetoolpy.main:main"
hnt = "hanetoolpy.main:main"

[tool.poetry.dependencies]
python = "^3.0"
rich = ">=10.0.0"
toml = ">=0.10.0"
