[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hanetoolpy"
version = "0.1.0"
description = "test"
authors = ["hanekit"]

[tool.poetry.scripts]
hanetoolpy = "hanetoolpy.typer.main:app"
hnt = "hanetoolpy.typer.main:app"

[tool.poetry.dependencies]
python = "^3.0"
rich = ">=10.0.0"
toml = ">=0.10.0"
numpy = ">=1.0.0"
pandas = ">=1.0.0"
matplotlib = ">=3.0.0"
typer = ">=0.5.0"
